# citations

./: .gitignore  README.md  config.json  discovery_config.yaml  pyproject.toml  references.bib  requirements.txt
.claude/: settings.json
.claude/commands/: analyze-citation.md  run-discovery.md
.github/workflows/: sync-to-wiki.yml  test-discovery.yml
discovery/: README.md  __main__.py  analysis.py  approve.py  candidates.py  config.py  crossref.py  fulltext.py  generate_candidates.py  openalex.py  unpaywall.py
pipeline/candidates/: aharoni_2018_all.yaml  ahmed_2019_hippocampal.yaml  ahmed_2020_hippocampal.yaml  aitken_2022_geometry.yaml  ajabi_2021_population.yaml  ajabi_2023_population.yaml  albo_2018_mysteries.yaml  alexander_2020_neurophysiological.yaml  amano_2022_computational.yaml  andersen_2017_hebbian.yaml  antic_2019_editorial.yaml  antoine_2019_dorsolateral.yaml  antonini_2020_extended.yaml  antony_2022_memory.yaml  antony_2024_causal.yaml  arac_2019_deepbehavior.yaml  aristotelous_2018_mathematical.yaml  asano_2025_timedependent.yaml  asaoka_2025_dissociable.yaml  aschauer_2022_learninginduced.yaml  ashby_2020_perceived.yaml  asok_2018_molecular.yaml  asok_2022_circular.yaml  attardo_2018_longterm.yaml  atucha_2025_noradrenergic.yaml  autore_2025_cost.yaml  (+1192 more)
scripts/: bib_to_wikitext.py  bib_utils.py  check_duplicates.py  normalize_keys.py  pr_summary.py  push_to_wiki.py
tests/: conftest.py  test_analysis.py  test_approve.py  test_bib_utils.py  test_candidates.py  test_config.py  test_crossref.py  test_fulltext.py  test_openalex.py  test_unpaywall.py
(+20 files in other folders)
